--- a/Packages/PyV8/osx-p3/config.json
+++ b/Packages/PyV8/osx-p3/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_id": "cac719a547387675ff3d06804fb91691eae78c2d", "last_update": 1498572490.205916}
+{"last_update": 1525899335.073271, "last_id": "cac719a547387675ff3d06804fb91691eae78c2d", "skip_update": false}
